fix spacing

--- a/less/media.less
+++ b/less/media.less
@@ -562,3 +562,8 @@
        
 //     }
 // }
+.universities{
+.slider-item--test {
+    display: none;
+}
+}
