--- a/less/style.less
+++ b/less/style.less
@@ -4,10 +4,19 @@
     box-sizing: border-box;
 }
 
+body {
+    // min-height: 100vh;
+    // min-height: -webkit-fill-available;
+  }
+
+  
+  
 html,
 body {
   scroll-behavior: smooth;
   overflow-x: hidden; // так делать нельзя но по другому никак не поставить декорирующие елементы
+//   height: -webkit-fill-available;
+    font-family: Roboto;
 }
 
 ul{
@@ -33,7 +42,7 @@ a{
 }
 
 .header{
-    padding: 17px 0;
+    padding: 5px 0;
     position: fixed;
     width: 100%;
     top: 0;
@@ -83,19 +92,19 @@ a{
     display: none;
 }
 
-
 .hover-items {
     position: absolute;
-    padding-top: 55px;
+    padding-top: 30px;
      display: none;
      transition: 0.3s;
      &::before {
          content: "";
          position: absolute;
-        //  border-top-left-radius: 8px; TODO opacity
-        top: 15px;
+         top: -2px;
          left: 0;
-        border: 20px solid transparent; border-bottom: 20px solid rgba(244, 244, 244, 0.9); border-left: 20px solid rgba(244, 244, 244, 0.9);
+         border: 17px solid transparent;
+         border-bottom: 15px solid rgba(244, 244, 244, 0.9);
+         border-left: 20px solid rgba(244, 244, 244, 0.9);
      }
 &__list{
   
@@ -126,7 +135,7 @@ a{
         line-height: 18px;
         color: #555A61;
         &:hover {
-            color: #fff;
+            color:  #00369C;
         }
     }
     &-icon {
@@ -174,7 +183,14 @@ a{
         font-size: 20px;
         border: none;
     }
+    &--header {
+        padding: 6px 37px;
+    }
 
+}
+
+.header .header-slider__content .btn--header {
+    padding: 6px 37px;
 }
 
 .logo {
@@ -213,6 +229,28 @@ a{
         border: 4px solid #BDBDBD;
         border-radius: 28px;
     }
+}
+
+.connection-info__btn--red {
+    padding: 12px 26px;
+    margin-left: auto;
+    background: linear-gradient(186.68deg, #FF0000 9.11%, #CE0000 98.12%);
+    border-radius: 30px;
+    font-weight: bold;
+    font-size: 20px;
+}
+.connection-info__btn--tablet {
+    display: none;
+}
+
+.connection-info__btn--sticky{
+    display: none;
+    position: absolute;
+    z-index: 3;
+    bottom: -29px;
+    right: -29px;
+    padding: 7px 14px;
+    font-size: 15px;
 }
 .rectangle-decorate-block {
     position: absolute;
@@ -262,10 +300,12 @@ a{
 }
 
 .connection-info {
+    position: relative;
     padding-top: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 3;
 
     &-tablet {
         display: flex;
@@ -288,7 +328,7 @@ a{
     }
 
     .connection-info__btn {
-        padding: 12px 26px;
+        padding: 12px 37px;
         background: linear-gradient(186.68deg, #FF0000 9.11%, #CE0000 98.12%);
         border-radius: 30px;
         font-weight: bold;
@@ -297,27 +337,7 @@ a{
     }
 }
 
-.connection-info__btn--red {
-    padding: 12px 26px;
-    margin-left: auto;
-    background: linear-gradient(186.68deg, #FF0000 9.11%, #CE0000 98.12%);
-    border-radius: 30px;
-    font-weight: bold;
-    font-size: 20px;
-}
-.connection-info__btn--tablet {
-    display: none;
-}
 
-.connection-info__btn--sticky{
-    display: none;
-    position: absolute;
-    z-index: 3;
-    bottom: -29px;
-    right: -29px;
-    padding: 7px 14px;
-    font-size: 15px;
-}
 
 
 
@@ -387,6 +407,11 @@ a{
         letter-spacing: -0.02em;
         color: #FFFFFF;
         white-space: nowrap;
+
+        &--rus-num {
+            letter-spacing: 0.01em;
+            margin-top: 2px;
+        }
     }
 }
 
@@ -539,7 +564,7 @@ display: none;
 }
 
 .header-slider {
-    margin-top: 76px;
+    margin-top: 52px;
     overflow: hidden;
     position: relative;
     background-image: url(../img/photo/headerSlider/medicine.png);
@@ -559,10 +584,11 @@ display: none;
         position: absolute;
         top: -60px;
         left: 20px;
-        z-index: 1;
+      z-index: 1;
         &--right {
-            left: 75.75%;
+            left: 82%;
             top: -138px;
+            z-index: -1;
         }
     }
     
@@ -581,7 +607,16 @@ display: none;
         font-weight: 500;
         font-size: 85px;
         text-transform: uppercase;
-        margin-bottom: 19px;
+        margin-bottom: 0;
+    }
+
+    &__assistant-subtitle {
+        font-style: italic;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 28px;
+        text-transform: uppercase;
+        margin-bottom: 18px;
     }
 
     &__subtitle {
@@ -736,7 +771,7 @@ display: none;
 .social-nav {
     position: absolute;
     top: 50%;
-    right: -37px;
+    right: 45px;
     transform: translate(0, -50%);
    
     &__main {
@@ -769,6 +804,7 @@ display: none;
 
 .assistent-slider-wrap {
     position: relative;
+    z-index: 29;
 }
 .header-assistent-slider {
     position: absolute;
